@@ -97,7 +97,7 @@
     (regexp-replace-all ,regexp-replace-all)
     (source-info ,(lambda (x) #f))
     (errorf ,errorf)
-    (eval ,(lambda a (error "eval not supported")))
+    (eval ,(lambda a (evaluate (car a))))
     (raise ,(lambda (a) (error a)))
     (raise-continuable ,(lambda (a) (error a)))
     (with-exception-handler ,(lambda x (error "with-exception-handler not implemented")))
@@ -117,7 +117,7 @@
     (exit ,exit)
     (macroexpand-1 ,pass1/macroexpand)
     (memv ,memv)
-    (procedure? ,(lambda e (error "procedure? not implemented")))
+    (procedure? ,vector?)
     (load ,(lambda e (error "load not implemented")))
     (symbol? ,symbol?)
     (dynamic-wind ,(lambda e (error "dynamic-wind not implemented")))
